@@ -1,0 +1,17 @@
+name,abbrv,formula,state,ref1,ref2,date,model,E_units,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
+KHSO4,NA,KHSO4,aq,TAT+24,NA,2024-11-30,HKF,cal,-246551,NA,52.892,43.67,36.82,6.8032,8.8337,2.278,-3.1442,31.8025,5.8381,0,0
+KSO4-,NA,KSO4-,aq,TAT+24,NA,2024-11-30,HKF,cal,-246636,NA,60.893,-136.37,30.4,6.8612,6.0072,3.3889,-3.0273,-63.7366,-30.8131,1.0996,-1
+H2SO4,NA,H2SO4,aq,TAT+24,NA,2024-11-30,HKF,cal,-178211,NA,28.058,67.18,83.42,13.1225,24.5891,-3.9144,-3.7955,45.8348,10.5047,0,0
+AuHS,NA,AuHS,aq,TAT+24,NA,2024-11-30,HKF,cal,8208,NA,38.583,26.25,45.73,8.0227,11.8073,1.1093,-3.2671,-49.3817,37.2185,0,0
+AuHS(H2S)3,NA,AuHS(H2S)3,aq,TAT+24,NA,2024-11-30,HKF,cal,-13146,NA,174.161,111.89,145.3,21.6476,45.0745,-11.966,-4.6424,-48.4088,78.8834,0,0
+Au(HS)2-,NA,Au(HS)2-,aq,TAT+24,NA,2024-11-30,HKF,cal,3532,NA,71.791,-30.47,67.97,11.5845,20.504,-2.3089,-3.6266,1.6472,-8.8534,1.5338,-1
+Au2S2-2,NA,Au2S2-2,aq,TAT+24,NA,2024-11-30,HKF,cal,28054,NA,78.65,-119.3,83.58,14.2429,26.9949,-4.86,-3.895,-35.3863,-27.3368,3.079,-2
+AuOH,NA,AuOH,aq,TAZ24,NA,2024-11-30,HKF,cal,-25947,NA,33.492,18.03,46.58,8.1395,12.0926,0.9972,-3.2789,1.6058,8.0824,0,0
+AuCl,NA,AuCl,aq,TAZ24,NA,2024-11-30,HKF,cal,-1900,NA,52.2,-71.9,50.8,8.7165,13.5013,0.4435,-3.3371,-35.9711,-17.6806,0,0
+AuCl2-,NA,AuCl2-,aq,TAZ24,NA,2024-11-30,HKF,cal,-36572,NA,43.5,9.5,68.52,11.4087,20.0747,-2.1401,-3.6089,16.8432,-0.463,0.7031,-1
+CuHS,NA,CuHS,aq,TTA+23,NA,2024-11-30,HKF,cal,-2969,NA,59.1,-67.713,44.85,7.9477,11.6243,1.1812,-3.2596,-32.4272,-16.8275,0.1197,0
+Cu(HS)2-,NA,Cu(HS)-2,aq,TTA+23,NA,2024-11-30,HKF,cal,-5665,NA,56.647,7.274,79.573,13.0153,23.9975,-3.6819,-3.7711,18.2332,-1.1267,0.9517,-1
+CuCl,NA,CuCl,aq,TTA+23,NA,2024-11-30,HKF,cal,-23360,NA,61.777,-101.336,26.967,5.4552,5.5383,3.5732,-3.008,-52.5985,-23.9839,0,0
+CuCl2-,NA,CuCl2-,aq,TTA+23,NA,2024-11-30,HKF,cal,-58026,NA,53.111,-19.991,32.604,6.6297,8.406,2.4461,-3.1265,4.1186,-7.1067,1.0612,-1
+Cu+,NA,Cu+,aq,AZ23,NA,2024-11-30,HKF,cal,11945,NA,9.7,13.66,-7.99,0.9243,-5.5244,7.9213,-2.5506,37.8578,-8.925,0.6653,1
+CuO-,NA,CuO-,aq,AZ23,NA,2024-11-30,HKF,cal,-19574,NA,-2.45,-12.69,-13.11,0.3673,-6.8845,8.4559,-2.4944,-55.4517,25.7204,1.0433,-1
